--- a/gb/21/6/28/n13051791.md
+++ b/gb/21/6/28/n13051791.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mjhpml342/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mjhpml342/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mjhpml342/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mjhpml342/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mjhpml342/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【百年透视】中共暴政的杀人历史</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id12998879-1406020409071975-600x429-e1622576358581-600x400.jpeg" />
-<h6>天安门大屠杀的血腥场景。（六四档案）
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056585-0f8ddc95685b8b90f917f29fa47922b9-600x400.jpg" />
+<h6>“中共百年暴行与谎言”系列之三：中共暴政的杀人历史。（大纪元）
 </h6>
 <hr>
 	<p>【大纪元2021年06月30日讯】【编者按：中共借百年党庆企图通过歪曲历史、掩盖真相再次操控媒体与舆论，吹捧其“伟、光、正”，搞全民洗脑。本系列文章通过不同角度回顾中共的百年暴行、谎言及反人类历史。】</p>
 <p>6月28、29日，中共党媒刊发了《中国共产党一百年大事记》，其中只字不提在中共历次政治运动中丧生的民众死亡数字，更隐去了持续20年之久对法轮功的残酷迫害。中共的刻意隐瞒不可能抹煞事实真相，也无法掩盖和消除中共的罪恶。</p>
-<p>大纪元系列社论《<ahref="https://github.com/mjhpml342/djy/blob/master/gb/nf3541.md#1">九评共产党</a>》写道：“从1949年以后，中国有一半以上的人口受到过中共的迫害，估计有六千万到八千万人非正常死亡，超过人类两次世界大战死亡人数的总和。”[1]</p>
+<p>大纪元系列社论《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/nf3541.md#1">九评共产党</a>》写道：“从1949年以后，中国有一半以上的人口受到过中共的迫害，估计有六千万到八千万人非正常死亡，超过人类两次世界大战死亡人数的总和。”[1]</p>
 <p>《九评共产党》指出，暴力是共产党夺取和维持政权的手段，“暴力的目的，是制造恐惧。”[2] “与世界上其它共产国家一样，中共不但大肆屠杀民众，对其内部也进行血腥清洗，其手段也极其残酷，目的之一就是清除那些‘人性’战胜了‘党性’的异己分子。它不但需要恐吓人民，也需要恐吓自己人。”[3]下面回顾一下中共几次主要的血腥政治运动。</p>
-<h2><strong>一、<ahref="https://github.com/mjhpml342/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89%E6%95%B4%E9%A3%8E.md#1">延安整风</a></strong></h2>
-<p>1942年2月至1945年4月的<ahref="https://github.com/mjhpml342/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89%E6%95%B4%E9%A3%8E.md#1">延安整风</a>运动，是中共党内第一次大规模整肃，采用了审干、肃反等红色恐怖和流氓手段，建立了毛泽东在党内的绝对权威。整风酿出了大量冤假错案，知识分子遭到的迫害尤其严重。有学者指，运动造成超过一万人死亡。</p>
+<h2><strong>一、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89%E6%95%B4%E9%A3%8E.md#1">延安整风</a></strong></h2>
+<p>1942年2月至1945年4月的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89%E6%95%B4%E9%A3%8E.md#1">延安整风</a>运动，是中共党内第一次大规模整肃，采用了审干、肃反等红色恐怖和流氓手段，建立了毛泽东在党内的绝对权威。整风酿出了大量冤假错案，知识分子遭到的迫害尤其严重。有学者指，运动造成超过一万人死亡。</p>
 <p>当时，在马列学院编译室工作的王实味因为质疑中共的等级制度和官僚化趋向，被定性为“反革命托派奸细分子”、“反党五人集团成员”、“暗藏的国民党特务”。王实味于1943年被逮捕，1947年被乱刀砍死，成为第一个在整风中被处死的知识分子。</p>
 <p>然而，《中共百年大事记》竟称：“整风运动是一次深刻的马克思主义思想教育运动，收到巨大成效”，“所积累的经验对党的建设具有重大而深远的意义”。</p>
 <p>中共为何赞许延安整风？因为自那时起，共产党一直沿用那套引蛇出洞、翻脸赖账、乱扣罪名、严酷清洗、残忍杀人的做法。中共就是通过这一系列手段来制造恐惧，巩固政权，所谓“深远意义”实为不折不扣的邪恶。</p>
@@ -21,6 +21,7 @@
 <p>前广东省副省长杨立在《带刺的红玫瑰——古大存沉冤录》一书中透露，1953年春季，广东西部地区的土改中有1156人自杀。当时该省流行的口号是：“村村流血，户户斗争。”</p>
 <p>前新华社社长穆青1950年6月2日在《内部参考》中报导说，河南土改运动中一个多月即发生逼死人命案件40余起。兰封县瓜营区在20天里逼死7个人。</p>
 <p>四川学者谭松耗费14年，采访了大量土改亲历者，写下50余万字的口述史书稿《血红的土地》。2013年7月30日，谭松在香港中文大学发表了“川东地区的土地改革运动”专题演讲。谭松认为，土改设立所谓的“人民法庭”实际上下放杀人权，鼓励杀人。当年土改工作队员戴廷珍说：“批斗之后就是枪毙，我们每到一个地方都要杀人，共产党要这样做才吓得住人。”</p>
+<figure id="attachment_13009766" aria-describedby="caption-attachment-13009766" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13009766-p1975363a448699313-ss.jpeg"><img class="size-full wp-image-13009766" src="https://i.epochtimes.com/assets/uploads/2021/06/id13009766-p1975363a448699313-ss.jpeg" alt="" width="500" b="281" /></a><figcaption id="caption-attachment-13009766" class="wp-caption-text">在土改中被批斗的地主被强迫下跪。（网络图片）</figcaption></figure>
 <h2><strong>三、“镇反”</strong></h2>
 <p>1950年10月10日至1951年底，中共在全国范围发动了“镇压反革命”运动。镇反期间，中共曾经定下杀掉人口千分之一的目标，最后杀人超过了这一比例。</p>
 <p>1954年1月，时任中共公安部副部长徐子荣在报告中称，镇反运动以来，全国共逮捕了262万余人，其中“共杀反革命分子71万2,000余名，关了1,29万余名，先后管制了1,20万余名。捕后因罪恶不大，教育释放了38万余名。”</p>
@@ -29,6 +30,7 @@
 <p>旅居美国的学者胡平讲述了他的家庭悲剧。据“美国之音”报导，胡平的父亲于1949年随其所在的国民党部队“起义”，当时共产党就向他们宣布“既往不咎”，还说“起义光荣”，给每个起义人员发了证书。</p>
 <p>1950年镇反开始，胡平的父亲被当成所谓的历史反革命，1952年4月被遣返原籍，两个月之后被执行了死刑。1984年，河南许昌法院跟胡平家人联系，宣布给胡平父亲平反。</p>
 <p>胡平说：“原来就说的是既往不咎嘛，你怎么凭白无故地就把人给杀了呢？我母亲每谈到这一点，非常愤怒，永远也忘不了。因为当她得知我父亲遇害的消息的时候，那张起义光荣的证书还在我们家里搁着呢。”</p>
+<figure id="attachment_12989177" aria-describedby="caption-attachment-12989177" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id12989177-201310250921326971-2278633-e1622483312562.jpg"><img class="size-large wp-image-12989177" src="https://i.epochtimes.com/assets/uploads/2021/06/id12989177-201310250921326971-2278633-600x394.jpg" alt="" width="600" b="394" /></a><figcaption id="caption-attachment-12989177" class="wp-caption-text">镇反的照片中，被处刑的人，腰杆挺直，一个个气宇轩昂，正气凛然。（公有领域）</figcaption></figure>
 <h2><strong>四、“三反”、“五反”、“肃反”</strong></h2>
 <p>1951年到1952年10月，中共开展了“三反”和“五反”运动。“三反”是在国家机关和企业中进行“反贪污”、“反浪费”、“反官僚主义”；“五反”是在私营企业中进行“反行贿”、“反偷税漏税”、“反偷工减料”、“反盗骗国家财产”、“反盗窃国家经济情报”的斗争。</p>
 <p>“三反”运动处决了个别腐败的中共干部，但紧接着，中共认为干部变坏是资本家引诱的结果，于是开始“五反”。“五反”的对象是国内资产阶级，实际上就是抢资本家的钱、甚至是谋财害命。仅在上海一地，从1952年1月25日至4月1日的不完全统计，因运动而自杀者就达到了876人。</p>
@@ -39,6 +41,7 @@
 <p>中共的结论是：反右是“正确和必要的”，但它未说明“严重扩大化”造成了什么后果？</p>
 <p>根据中共官方的统计数据，全中国大陆55万2,973人被划为右派，此外，据估计有40万到70万知识分子被下放到农村或工厂中进行劳动改造，总计约140万人遭到批斗和迫害，部分被划为右派的知识分子自杀或被迫害致死，包括死于饥饿、疾病和恶劣的劳改条件。</p>
 <p>1970年代末、1980年代初，中共领导人承认“反右”过程中的“扩大化”错误，对大批右派予以“改正”、“平反”，但96人不予改正。这就是说，整个运动中“个别”右派人士被错误扩大约6000倍左右。即使是最后的96名“右派”，中共也说不出他们为何罪不可恕。</p>
+<figure id="attachment_10044656" aria-describedby="caption-attachment-10044656" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/Anti-Rightist_Movement.jpg"><img class="size-large wp-image-10044656" src="https://i.epochtimes.com/assets/uploads/2018/01/Anti-Rightist_Movement-600x390.jpg" alt="" width="600" b="390" /></a><figcaption id="caption-attachment-10044656" class="wp-caption-text">反右打断了中国人的脊梁，人们汲取“祸从口出”的血泪教训，整个社会是非颠倒，黑白混淆，良心被鄙弃，人性遭践踏，是人类历史上一次罕见的精神浩劫。（公有领域）</figcaption></figure>
 <p>云南省的李曰垓，13岁参加中共“革命”，16岁莫名其妙地成了“右派”，被关押了21年，从未得到“处理书”。他在《噩梦醒了吗》一文中写道：“在长达21年至22年黑暗岁月的右派集中营中，精神奴役、人格凌辱、超负荷劳役的摧残、累死、饿死、冻死、捆死、吊死、工伤、殴打致死、分化互残、强迫离婚、逼使自杀等手段在全国各地右派集中营成为普遍现象，整死整残的人数和精神伤害程度超过德国纳粹奥斯威辛集中营的多少倍？这是一个无法回避世界历史考证的严峻课题。”</p>
 <p>李曰垓曾说：“反右这场人祸是一起国家犯罪，也就是说，犯罪者利用国家机器来作案，大规模诬陷和残害公民，从而把中华民族隔绝于人类主流文明之外……反右的维护者自己不敢正视历史和坦白历史，又最恐惧人民从噩梦中醒来。”“是暴力社会主义这个制度本身注定要采取的外在形式。并不是反右的一次邪风恶浪浸黑了这个政权，而是暴力政治体制所固有的毒液分泌出了反右运动。”</p>
 <h2><strong>六、文革</strong></h2>
@@ -48,6 +51,7 @@
 <p>中共元老叶剑英曾讲话说：文革整了1亿人，死了2000万。</p>
 <p>文革的第一波杀人潮开始于1966年。当年6月，在“横扫一切牛鬼蛇神”的宗旨下，抄家之风由北京的红卫兵掀起，迅速波及全国。随后，开始了拷打和杀戮“牛鬼蛇神”。1966年8月，北京的红卫兵在一个月内就打死了1,772人。</p>
 <p>研究文革受难者历史的学者王友琴在《恐怖的“红八月”》中写道：“1966年8月下旬，大批被打死的人不标姓名堆在一起被运往火葬场。北京师范大学附属第二中学的校长高云和北京第31中的书记杜光，都是在被红卫兵打昏过去以后就送去了火葬场。火葬场的老工人发现他们还没有死，没有烧他们。他们又回了家。当时大量尸体积压，火葬场来不及焚烧，只好在尸体堆上放了冰块，血水横流。”</p>
+<figure id="attachment_11721395" aria-describedby="caption-attachment-11721395" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/12/71-8.jpg"><img class="size-large wp-image-11721395" src="https://i.epochtimes.com/assets/uploads/2019/12/71-8-600x386.jpg" alt="" width="600" b="386" /></a><figcaption id="caption-attachment-11721395" class="wp-caption-text">图：1967年文革期间，江青等人打着毛泽东的旗号，残酷迫害彭德怀。（公有领域）</figcaption></figure>
 <p>1967年1月26日，新疆“石河子事件”打响了全国武斗的第一枪，也揭开了第二波杀人高峰的序幕。从1967年8月开始，上海、南京、郑州、长春、沈阳、重庆和长沙等地相继发生了大规模武斗，至1968年底方渐平息。估计死于武斗的总人数约为30万至50万。</p>
 <p>1968至1969年的“清理阶级队伍”是毛泽东“横扫一切牛鬼蛇神”的高潮，也是文革中死人最多的时期。资料显示，全国两千多个县，每一个县平均约有一百人死于“清队”。</p>
 <p>文革初期，大约有10万至20万人因为不堪迫害而自杀。如此大范围的自杀潮，在世界历史上都属罕见。</p>
@@ -55,6 +59,7 @@
 <p>正是这个为张志新“平反昭雪”的党，当年下达了处决令，并且在行刑前割断了她的喉管。2019年，中共官方将张志新列为“最美奋斗者”之一。这一“荣誉”是对死者极其残忍、无情的践踏。</p>
 <h2><strong>七、六四屠杀</strong></h2>
 <p>1989年6月4日，中共血腥镇压了长达五十多天的学生民主运动，震惊世界。究竟有多少人死于“六四”屠杀，中共没有公布，各界说法不一。</p>
+<figure id="attachment_13056582" aria-describedby="caption-attachment-13056582" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13056582-1406020409071975-600x429-e1622576358581-1.jpeg"><img class="size-large wp-image-13056582" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056582-1406020409071975-600x429-e1622576358581-1-600x429.jpeg" alt="" width="600" b="429" /></a><figcaption id="caption-attachment-13056582" class="wp-caption-text">天安门大屠杀的血腥场景。（六四档案）</figcaption></figure>
 <p>“天安门母亲”运动确认的死者清单分别于1999年提出155人，2005年提出187人，2010年提出195人，后来在2011年8月，共有202人获得确认。</p>
 <p>前中国人民大学哲学系副教授丁子霖向“中国人权”提供了“六四”遇难者家属证词，以下节选一位母亲的证词片断。</p>
 <p>吴向东的母亲徐玨回忆1989年6月4日寻找儿子的情况说，“接着我们去了人民医院、儿童医院、阜外医院，每个医院门口都贴着死伤者名单，都是密密麻麻一片，各约400多人，大家都簇拥着寻找自己亲人的名字。我们翻了许久，未见儿子向东的名字，又进到医院人从无名死（尸）体中一个个去辨认。可怜哪！都是一具具血肉模糊，睁着大大眼睛的年青人。”（注：吴向东生前为北京东风电视机厂四车间工人、北京仪器仪表职工大学企业管理专业三年级学生，1989年6月3日晚11时左右于木樨地桥头附近颈部中弹，4日晨死于复兴医院，年仅21岁。）</p>
@@ -75,51 +80,46 @@
 <p>在人类历史上，从来没有一个政权像中共那般残忍，对自己的国民一次次挥舞屠刀。今日，中共高调“庆”百年，试图用谎言掩盖它的深重罪恶。中共称其改变了中华民族的前途命运，事实上，红色暴政不仅消灭了数千万中国人的肉体，而且还毒害了几代国人的灵魂。这是中共给中国带来的巨大灾难。</p>
 <p>中共不敢否定过往和现时的暴力镇压，因为它一旦否定了整风、土改、镇反、文革，一旦它承认错杀、滥杀，就等于否定了中共的执政合法性，它就必须面对审判和追责。《九评共产党》论述道：“杀人是中共维系统治最必要的手段之一。在血债越欠越多的情况下，放下屠刀就等于把自己交给民众清算。”[4]</p>
 <p>今日，中共打着“维护国家安全”的旗号，在继续欺骗和迫害民众，继续实施国家恐怖主义。中共所称的“辉煌”和“奇迹”是对全体中国人民的侮辱，是对中华民族文明的亵渎。</p>
-<p>（作者<ahref="https://github.com/mjhpml342/djy/blob/master/gb/tag/%E7%94%B0%E4%BA%91.md#1">田云</a>是大纪元专栏作家，文学硕士，从事教育管理和文化研究。）</p>
+<p>（作者<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B0%E4%BA%91.md#1">田云</a>是大纪元专栏作家，文学硕士，从事教育管理和文化研究。）</p>
 <p>附注：</p>
 <p>[1]、[3]、[4]【九评之七】“评中国共产党的杀人历史”</p>
 <p>[2]【九评之一】“评共产党是什么”</p>
+<p>点阅<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%e7%99%be%e5%b9%b4%e9%80%8f%e8%a6%96.md#1" target="_blank" rel="noopener noreferrer">中共百年透视系列</a>。</p>
 <p>责任编辑：高义#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/16/7/14/n8100537.md#1">汪志远：世界不能再听任中共活摘器官杀人</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/16/7/21/n8124974.md#1">科学家之子的沉痛告白：中共杀人不用刀 (上)</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/16/12/6/n8565935.md#1">揭中共土改杀人史 陕西警察被判刑引关注</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/17/2/17/n8822194.md#1">中国共产党的杀人历史简述</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/7/14/n8100537.md#1">汪志远：世界不能再听任中共活摘器官杀人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/7/21/n8124974.md#1">科学家之子的沉痛告白：中共杀人不用刀 (上)</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/12/6/n8565935.md#1">揭中共土改杀人史 陕西警察被判刑引关注</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/2/17/n8822194.md#1">中国共产党的杀人历史简述</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263648.md#1" target="_blank">共产暴政录：迫害法轮功，毁坏道德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010192.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/22/n11402499.md#1" target="_blank">法轮功阿根廷中领馆前反迫害 十年如一日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/14/n13020876.md#1">【命理】功名有无 寿命长短 都是上天给的</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046979.md#1">前苏联海军总司令：帽状UFO从海中飞出</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/13/n13019873.md#1">【忽必烈传】南宋气数尽 蒙元攻下襄樊</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048557.md#1">【方菲访谈】专访李有甫：从三星堆看史前文化</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/16/n13026383.md#1">出入冥界神界看到过去未来事  他们捎给人什么讯息？</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054125.md#1">【时事纵横】习续约拉拢普京 党庆秀神秘提前?</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054117.md#1">【远见快评】中共自曝病毒信息 中俄续约藏玄机</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054689.md#1">【拍案惊奇】习替江背锅卖国？外交部遭纵火</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/21/n13037627.md#1">在Costco购物 值得多买的6种食品和日用品</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/20/n13033933.md#1">美空军最新型F-15战机到底有多隐形？</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051297.md#1">组图：美军频示潜艇 海狼级现身 意在沛公</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13051912.md#1">子瑜唱《ME!》登推特趋势榜冠军 方灿赞其成长</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051398.md#1">梁朝伟庆59岁生日 刘嘉玲晒照秀恩爱</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050645.md#1">Delta病毒侵台 贾永婕急送PAPR等器材至屏东</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055192.md#1">“赚来干嘛 ” 柯宇纶膝盖超硬拒陆800万片酬</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054065.md#1">张雨绮为何改名？只因电视广告里常有一个字</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13045323.md#1">病毒源头2可能 专家：找到源头关乎所有人安危</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050433.md#1">中东天坑获封“地狱之井” 数百万年仍是谜</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050609.md#1">幸运成为航班上唯一乘客 印男：我像君王</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052817.md#1">早上喝一杯防便秘 营养师：牛奶和它是黄金组合</a></li>
-<li><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052117.md#1">首次开口说话竟向妈求救 女婴救了自己一命</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/28/n13051791.htm">【百年透视】中共暴政的杀人历史</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/28/n13051791.htm">【百年透视】中共暴政的杀人历史</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13051791.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mjhpml342/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mjhpml342/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mjhpml342/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mjhpml342/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjhpml342/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/28/n13051791.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
